# LabsOOP

Lab1/: CMakeLists.txt  main.cpp  test.cpp
Lab1/vowel_lib/: count_vowels.cpp  vowel_lib.h
Lab2/: CMakeLists.txt  gtests.cpp  main.cpp
Lab2/Twelve_lib/: Twelve.cpp  Twelve.h
Lab3/: CMakeLists.txt  main.cpp  tests.cpp
Lab3/lib/: Figure.cpp  Figure.h
Lab4/: CMakeLists.txt  main.cpp  tests.cpp
Lab4/lib/: Figure.cpp  Figure.h
Lab5/: CMakeLists.txt  main.cpp  tests.cpp
Lab5/Libs/Allocator_lib/: Allocator.cpp
Lab5/Libs/List_lib/: List.h  List.inl
Lab6/: CMakeLists.txt  main.cpp  tests.cpp
Lab6/data/names/: creatures_names.txt  surnames.txt
Lab6/data/pre_created_npcs/: npcs.txt
Lab6/lib/FactoryLib/: Factory.cpp  Factory.h
Lab6/lib/NpcLib/: Npc.cpp  Npc.h
Lab6/lib/ObserverLib/: Observer.cpp  Observer.h
Lab6/lib/UtillsLib/: Utills.cpp  Utills.h
Lab6/lib/VisitorLib/: Visitor.cpp  Visitor.h
lab7/: CMakeLists.txt
lab7/lib/: CMakeLists.txt  Factory.h  Npc.h  Observer.h  Visitor.h  World.h
lab7/src/: CMakeLists.txt  main.cpp
lab7/tests/: CMakeLists.txt  tests.cpp
